Mudança função removeItem para tentar corrigir problema id

--- a/index.html
+++ b/index.html
@@ -24,28 +24,21 @@
 
   <header class="dark center">
     <!-- cabeçalho dentro da página -->
-    <img src="images/IsdLe4ABF0416.png" alt="Logo" position="left" height="60%">
-    <table>
+    <img class="center" src="images/IsdLe4ABF0416.png" alt="Logo" position="left" height="60%">
+    <table class="center">
       <tr>
         <td>
-          <h1>ORGANIZADOR DE TAREFAS / TO-DO LIST</h1>
+          <h1 class=center>ORGANIZADOR DE TAREFAS / TO-DO LIST</h1>
         </td>
-        </tr>
-        <tr>
+      </tr>
+      <tr>
         <td>
-         <p>Uma excelente ferramenta para organizar seus afazeres e otimizar seu tempo!</p>
+          <p>Uma excelente ferramenta para organizar seus afazeres e otimizar seu tempo!</p>
         </td>
       </tr>
     </table>
   </header>
 
-  <nav>
-    <table>
-      <tr>
-        <td><img src="images/home_circle_icon_137496.png" alt="Home button" width="50%"></td>
-      </tr>
-    </table>
-  </nav>
 
 
   <main>
