--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- título na aba do navegador -->
   <title>DevinHouse's To-Do List!</title>
 
-  <!-- favicon de https://favicon.io -->
   <link rel="shortcut icon" href="icons/to-do-list.png" type="image/x-icon">
-
-  <!-- folha de estilos css -->
   <link rel="stylesheet" href="styles/style.css">
 
-  <!-- código javascript -->
   <script src="scripts/script.js" defer></script>
 
 </head>
 
-<body>
+<body onload="carregarItens()">
 
   <header class="dark center">
     <!-- cabeçalho dentro da página -->
